Multiple-Ingress-Controllers/echo-v2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-v2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - http: echo-v2.robofarming.com
      paths:
      - path: /echo-v2
        backend:
          serviceName: echo-server-v2
          servicePort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-v2
  labels:
    version: v2
spec:
  selector:
    matchLabels:
      app: echo-server
      version: v2
  replicas: 2
  template:
    metadata:
      labels:
        app: echo-server
        version: v2
    spec:
      containers:
      - name: echo-server
        image: k8s.gcr.io/echoserver:1.5
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-v2
  labels:
    version: v2
spec:
  type: ClusterIP
  ports:
  - name: echo-port
    port: 80
    targetPort: 8080
  selector:
    app: echo-server
    version: v2
