Multiple-Ingress-Controllers/multiple-host-names.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: multiple-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: "serviceName=echo-server-v1 rewrite=/;serviceName=echo-server-v2 rewrite=/"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo.robofarming.com
    http: 
      paths:
        - path: /echo-v1
          backend:
            serviceName: echo-server-v1
            servicePort: 80
        - path: /echo-v2
          backend:
            serviceName: echo-server-v2
            servicePort: 80
